@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 12-06-2005 fixed: seeking after selecting time using seekbar was very slow
  - 12-06-2005 changed: HttpApi: re-enabled database lookup
  - 11-06-2005 updated: mplayer.dll - about 1 meg smaller than old (saves mem).
                        has been compiled with gcc.3.4.4 and has some unneeded filters removed
